@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-10T01:21:17Z",
-  "count" : 2,
+  "timestamp" : "2025-08-23T01:04:41Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
