@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-22T12:27:42Z",
+  "timestamp" : "2025-08-23T01:04:41Z",
   "count_outdated" : 5256,
   "uniques_outdated" : 2880,
-  "count" : 5292,
-  "uniques" : 2911,
+  "count" : 5293,
+  "uniques" : 2912,
   "clones" : [
     {
       "timestamp": "2025-08-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -115,12 +115,12 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
