@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2025-08-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-10T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2025-08-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
