@@ -1,3 +1,12 @@
+2025-08-23T01:04:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17169229468 # 1177
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
+* notice: last 14d: unq all: 18 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 2880 5256 / 2911 5292
+* notice: next accum: outdated-unq outdated-all / unq all: 2880 5256 / 2912 5293
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-08-09 2025-08-22]
+
 2025-08-22T12:27:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17155250885 # 1176
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
